--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: gitops-app
+  name: my-app
   labels:
-    app: gitops-app
+    app: my-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: gitops-app
+      app: my-app
   template:
     metadata:
       labels:
-        app: gitops-app
+        app: my-app
     spec:
       containers:
-      - name: gitops-app
-        image: tonuser/gitops-lab:latest
+      - name: my-app
+        image: mouhmedsn02/my-app:latest
         ports:
         - containerPort: 5000
