--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gitops-app-service
+  name: my-app-service
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
-    app: gitops-app
+    app: my-app
   ports:
     - port: 80
       targetPort: 5000
+      nodePort: 30080
