--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: my-app
-        image: mouhmedsn02/my-app:15
+        image: mouhmedsn02/my-app:simple
         ports:
         - containerPort: 5000
